--- a/app/pages/Home/HeroSection.css
+++ b/app/pages/Home/HeroSection.css
@@ -3,7 +3,7 @@
     position: relative;
     width: 100%;
     height: 100vh; /* Full-screen height */
-    background-image: url('../assets/images/wallpaper.png'); /* Adjust the path */
+    background-image: url('../../assets/images/wallpaper.png'); /* Adjust the path */
     background-size: cover; /* Ensure the wallpaper covers the entire area */
     background-position: center; /* Center the wallpaper */
     display: flex;
